--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ python-dotenv>=1.0.0
 pillow>=10.0.0
 requests>=2.31.0
 
+# GUI support (optional, only needed if using GUI interface)
+PySide6>=6.5.0
+
 # Optional: OpenAI API support (only needed if using OpenAI translation service)
 # openai>=1.0.0
 
